// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot when logged in 1`] = `
<DocumentFragment>
  <nav
    class="nav-container navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Petfinder
    </a>
    <div
      class="nav-links"
    >
      <a
        class="nav-link"
        href="/pets"
      >
        Pets
      </a>
      <a
        class="nav-link"
        href="/user/favorites"
      >
        Favorites
      </a>
      <a
        class="nav-link"
        href="/user/profile"
      >
        Profile
      </a>
      <a
        class="nav-link"
        href="/"
      >
        Logout 
      </a>
    </div>
  </nav>
</DocumentFragment>
`;

exports[`matches snapshot when logged out 1`] = `
<DocumentFragment>
  <nav
    class="nav-container navbar navbar-expand-md"
  >
    <a
      class="navbar-brand"
      href="/"
    >
      Petfinder
    </a>
    <div
      class="nav-links"
    >
      <a
        class="nav-link"
        href="/login"
      >
        Login
      </a>
      <a
        class="nav-link"
        href="/signup"
      >
        Signup
      </a>
    </div>
  </nav>
</DocumentFragment>
`;
